fixes a bug where the weather diagram is not displayed on iPhone5

--- a/app/assets/stylesheets/weather.css.scss
+++ b/app/assets/stylesheets/weather.css.scss
@@ -14,7 +14,7 @@
 	top: 60px;
 	left: 0px;
 	width: 100%;
-	height: 1vh;
+	height: 100%;
 	z-index: 0;
 	overflow-x:auto;
 	overflow-y:hidden;
